# irmaseal

irmaseal-core/: Cargo.toml
irmaseal-core/src/: lib.rs  util.rs
irmaseal-core/src/stream/: crypto.rs  mod.rs  opener.rs  sealer.rs  tests.rs  wasm.rs
irmaseal-pkg/: Cargo.toml
irmaseal-pkg/src/: error.rs  server.rs
irmaseal-pkg/src/handlers/: parameters.rs  request.rs  request_fetch.rs
