[package]
name = "irmaseal-core"
description = "Core library for IRMAseal communication and bytestream operations."
version = "0.1.2"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"
license = "MIT"
keywords = ["ibe", "encryption", "ecc"]
homepage = "https://github.com/Wassasin/irmaseal/tree/master/irmaseal-core"
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.8.1", optional = true }
rand = { version = "0.7.0", optional = true }
aes = { version = "0.4.0", optional = true }
ctr = { version = "0.4.0", optional = true }
hmac = { version = "0.7.1", optional = true }
sha3 = { version = "0.8.2", optional = true }

arrayref = "0.3.5"
arrayvec = { version = "0.4.11", features = ["array-sizes-129-255", "serde-1"] }
subtle = "2.2.1"
serde = { version = "1.0.99", features = ["derive"] }
base64 = "0.10.1"
ibe = "0.1.3"
async-std = "1.6.2"

wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.12"
js-sys = "0.3.39"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.4"
features = ["SubtleCrypto", "AesCtrParams", "CryptoKey"]


[features]
default = ["stream"]

stream = ["digest", "rand", "aes", "ctr", "hmac", "sha3"]
